--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -154,10 +154,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
+      #- uses: actions/download-artifact@v4
+      #  with:
+      #    name: public_build
+      #    path: ./build
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
