--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,61 +16,61 @@ env:
   PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
-#  build_public:
-#    name: Build public
-#    strategy:
-#      matrix:
-#        node: [ 16 ]
-#    runs-on: ubuntu-latest
-#    outputs:
-#      output1: ${{ steps.artifact-upload-step.outputs.artifact-id }}
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#
-#      - name: Install Node ${{ matrix.node }}
-#        uses: actions/setup-node@v2
-#        with:
-#          node-version: ${{ matrix.node }}
-#
-#      - name: Build public
-#        id: build-public
-#        env:
-#          NODE_OPTIONS: "--max_old_space_size=4096"
-#        run: make build_public
-#
-#      - uses: actions/upload-artifact@v4
-#        id: artifact-upload-step
-#        with:
-#          name: public_build
-#          path: ./build
-#          retention-days: 1
-#
-#      - name: Output artifact ID
-#        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
+  build_public:
+    name: Build public
+    strategy:
+      matrix:
+        node: [ 16 ]
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.artifact-upload-step.outputs.artifact-id }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-#  build_common:
-#    name: Build common
-#    runs-on: ubuntu-latest
-#    outputs:
-#      output1: ${{ steps.artifact-upload-step.outputs.artifact-id }}
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#
-#      - name: Build common
-#        id: build-common
-#        run: make build_common_structure
-#
-#      - uses: actions/upload-artifact@v4
-#        id: artifact-upload-step
-#        with:
-#          name: common_build
-#          path: ./tmp/common
-#          retention-days: 1
-#
-#      - name: Output artifact ID
-#        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
+      - name: Install Node ${{ matrix.node }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: Build public
+        id: build-public
+        env:
+          NODE_OPTIONS: "--max_old_space_size=4096"
+        run: make build_public
+
+      - uses: actions/upload-artifact@v4
+        id: artifact-upload-step
+        with:
+          name: public_build
+          path: ./build
+          retention-days: 1
+
+      - name: Output artifact ID
+        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
+
+  build_common:
+    name: Build common
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.artifact-upload-step.outputs.artifact-id }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build common
+        id: build-common
+        run: make build_common_structure
+
+      - uses: actions/upload-artifact@v4
+        id: artifact-upload-step
+        with:
+          name: common_build
+          path: ./tmp/common
+          retention-days: 1
+
+      - name: Output artifact ID
+        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
 #  run_tests:
 #    name: Run linux test
@@ -144,7 +144,7 @@ jobs:
   build_artefacts:
     name: Build artefacts
     runs-on: ubuntu-latest
-    #needs: [ build_public ]
+    needs: [ build_public ]
     steps:
 
       - env:
@@ -154,10 +154,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      #- uses: actions/download-artifact@v4
-      #  with:
-      #    name: public_build
-      #    path: ./build
+      - uses: actions/download-artifact@v4
+        with:
+          name: public_build
+          path: ./build
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
