--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -183,6 +183,13 @@ jobs:
           set: |
             *.cache-from=type=gha,scope=base
 
+      - uses: actions/upload-artifact@v4
+        id: upload-darwin-arm64
+        with:
+          name: darwin_arm64
+          path: ./dist/darwin_arm64
+          retention-days: 1
+
 #  docker_image_test:
 #    name: Test docker images
 #    runs-on: ubuntu-latest
