--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -187,7 +187,7 @@ jobs:
         id: upload-darwin-arm64
         with:
           name: darwin_arm64
-          path: ./dist/darwin_arm64
+          path: ./dist/darwin_arm64/server
           retention-days: 1
 
 #  docker_image_test:
