--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -144,6 +144,16 @@ jobs:
   build_artefacts:
     name: Build artefacts
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        go_version:
+          - 1.23.0
+        include:
+          - target: artifact-all
+          - go_version: 1.23.0
+            target: image
+
     needs: [ build_public ]
     steps:
 
@@ -165,10 +175,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-#      - name: trying to build artefacts
-#        id: build-artefacts
-#        run: make build_artefacts
-
       - name: create .env
         id: create-env
         run: make create_env
@@ -184,34 +190,13 @@ jobs:
           files: |
             ./docker-bake.hcl
             ${{ steps.meta.outputs.bake-file }}
-          targets: artifact-darwin-arm64
+          targets: ${{ matrix.target }}
           set: |
             *.cache-from=type=gha,scope=base
+            goxx.context=.
+            goxx.args.GO_VERSION=${{ matrix.go_version }}
 
-      - uses: actions/upload-artifact@v4
-        id: upload-artefact
-        with:
-          name: darwin_amd64
-          path: ./dist/darwin_arm64
-          retention-days: 1
-
-#  docker_image_test:
-#    name: Test docker images
-#    runs-on: ubuntu-latest
-#    needs: [ build_public ]
-#    steps:
-#      - name: Set env
-#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-#        env:
-#          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-#
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#
-#      - uses: actions/download-artifact@v4
-#        with:
-#          name: public_build
-#          path: ./build
-#
-#      - name: trying to test docker image
-#        run: make test_build
+      - name: List artifacts
+        if: ${{ matrix.target == 'artifact-all' }}
+        run: |
+          tree -nh ./dist
